# machines

./: README.md  demo.tsx  machines.code-workspace  package.json
.github/workflows/: clean-build.yml
dev-example/: .eslintrc.json  .gitignore  .prettierrc.json  README.md  package-lock.json  package.json  tmp.js  tsconfig.json
dev-example/src/: App.tsx  UIMachine.tsx  UIMachineCommon.tsx  UIMachinePassenger.tsx  UIMachineTaxi.tsx  example.test.ts  index.css  index.html  jonthebeach copy.ts  jonthebeach.ts  machines.ts  proto.ts  web.tsx
docs/swarm-workflow/: README.md
examples/swarm-workflow-example/: package-lock.json  package.json
machine-check/: .eslintrc.json  .gitignore  Cargo.toml  README.md  example-proto.ts  example.ts  jest.config.cjs  package-lock.json  package.json  tsconfig.json
machine-check/examples/: example-proto.ts  example.test.ts  paper.js
machine-check/examples/cjs/: .gitignore  tsconfig.json
machine-check/examples/esm/: jest.config.ts  proto.ts  referenceCheck.js  swarm-not-reachable.test.ts  swarm-not-wellformed.test.ts  swarm-wellformed.test.ts  tsconfig.json
machine-check/scripts/test/: cjs-common.ts  cjs-copy.ts  cjs-remove.ts
machine-check/src/: arsm.ts  index.ts  lib.rs  machine.rs  swarm.rs  traverse.ts  types.rs  typescript-json-schema.ts
machine-runner/: .eslintrc.json  README.md  example.ts  jest.config.cjs  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json
machine-runner/cjs/: .gitignore  package.patch.json  tsconfig.json
machine-runner/esm/: zod.ts
machine-visual/: .eslintrc.json  README.md  package-lock.json  package.json
(+84 files in other folders)
