[package]
name = "machine-check"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
intern-arc = "0.5.0"
petgraph = "0.6.3"
serde = { version = "1.0.159", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.95"
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
wasm-bindgen = "0.2.84"

[dev-dependencies]
maplit = "1.0.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
